tests/latch/static/failing/multiplyInt.wat
version https://git-lfs.github.com/spec/v1
oid sha256:42c6a264b9b50a994cf60328c2adc1806704feaca46da3099336d9a88dfb8fa6
size 1400121
